# stonks

./: .gitignore  README.md  main.py  pyproject.toml
alpaca_util/: __init__.py  crypto.py
candle/: __init__.py  recog_patterns.py  utils.py  visualize.py
candlestick/patterns/: candlestick_finder.py
candlestick/visualize/: visualize.py
indicators/super_trend/: __init__.py  indicator.py  super_trend.py  visualize.py
